tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.stderr
error[E0277]: DATE_TRUNC output type is not defined for `drizzle::core::types::Timestamp` on this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:8:9
  |
6 |     let _ = date_trunc(
  |             ---------- required by a bound introduced by this call
7 |         "day",
8 |         raw_non_null::<SQLiteValue, Timestamp>("CURRENT_TIMESTAMP"),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |
help: the trait `DateTruncPolicy<drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::core::types::Timestamp`
      but trait `DateTruncPolicy<drizzle_core::dialect::PostgresDialect>` is implemented for it
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for Timestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `drizzle_core::dialect::PostgresDialect`, found `drizzle_core::dialect::SQLiteDialect`
note: required by a bound in `date_trunc`
 --> core/src/expr/datetime.rs
  |
  | pub fn date_trunc<'a, V, P, E>(
  |        ---------- required by a bound in this function
...
  |     E::SQLType: DateTruncPolicy<V::DialectMarker>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `date_trunc`

error[E0277]: this date/time function is not available for this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:6:13
  |
6 |       let _ = date_trunc(
  |  _____________^
7 | |         "day",
8 | |         raw_non_null::<SQLiteValue, Timestamp>("CURRENT_TIMESTAMP"),
9 | |     );
  | |_____^ use a dialect-specific alternative
  |
  = help: the trait `PostgresDateTimeSupport` is not implemented for `drizzle_core::dialect::SQLiteDialect`
help: the trait `PostgresDateTimeSupport` is implemented for `drizzle_core::dialect::PostgresDialect`
 --> core/src/expr/datetime.rs
  |
  | impl PostgresDateTimeSupport for PostgresDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `date_trunc`
 --> core/src/expr/datetime.rs
  |
  | pub fn date_trunc<'a, V, P, E>(
  |        ---------- required by a bound in this function
...
  |     V::DialectMarker: PostgresDateTimeSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `date_trunc`

error[E0277]: DATE_TRUNC output type is not defined for `drizzle::core::types::Timestamp` on this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:6:13
  |
6 |       let _ = date_trunc(
  |  _____________^
7 | |         "day",
8 | |         raw_non_null::<SQLiteValue, Timestamp>("CURRENT_TIMESTAMP"),
9 | |     );
  | |_____^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |
help: the trait `DateTruncPolicy<drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::core::types::Timestamp`
      but trait `DateTruncPolicy<drizzle_core::dialect::PostgresDialect>` is implemented for it
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for Timestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `drizzle_core::dialect::PostgresDialect`, found `drizzle_core::dialect::SQLiteDialect`
